--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "react": "^16.11.0",
     "react-chartjs-2": "^2.9.0",
